--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,5 @@
-[package]
-name = "smartget"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-clap = { version = "4.5.31", features = ["derive"] }
-serde = { version = "1.0.218", features = ["derive"] }
-toml = "0.8.20"
-url = { version = "2.5.4", features = ["serde"] }
+[workspace]
+resolver = "2"
+members = [
+  "git-manager"
+]
