--- a/git-manager/Cargo.toml
+++ b/git-manager/Cargo.toml
@@ -9,3 +9,4 @@ clap_complete = "4.5.46"
 serde = { version = "1.0.218", features = ["derive"] }
 toml = "0.8.20"
 url = { version = "2.5.4", features = ["serde"] }
+git-manager-xml = { path = "../git-manager-xml" }
