--- a/git-manager/Cargo.toml
+++ b/git-manager/Cargo.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Madeline Baggins <declanbaggins@gmail.com>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 [package]
 name = "git-manager"
 version = "0.2.0"
